# wallet

./: .gitignore  .gitmodules  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
assets/logo/: info.txt
server/: Cargo.toml
server/src/: addresses.rs  auth.rs  lib.rs  main.rs  metadata.rs  transactions.rs
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/components/: Chart.tsx  Header.tsx  SideBar.tsx  TopCards.jsx  Transaction.jsx  TransactionHistory.tsx
src/app/context/: DrawerContext.ts
src/app/layout/: layout.tsx
src/app/login/: page.tsx
src/app/logout/: page.tsx
src/app/register/: page.tsx
src/app/styles/: Form.module.css  Layout.module.css
src/app/view-addresses/: page.tsx
src/lib/: auth.ts
