[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
bincode = "1.3.3"
chrono = "0.4.26"
hex = "0.4.3"
num-bigint = "0.4.3"
odyssey = { path = "../odyssey" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = "0.5.2"
secp256k1 = { version = "0.27.0", features = ["bitcoin-hashes-std", "rand-std", "serde"] }
serde = { version = "1.0.177", features = ["derive"] }
sled = "0.34.7"
